@@ -259,6 +259,7 @@ Aliases basicalias[] = {
     { "cpuid",   "_cogid" },
     { "cpuwait", "_cogwait" },
     { "cpustop", "_cogstop" },
+    { "date$", "_basic_date" },
     { "dpeek", "__wpeek" },
     { "dpoke", "__wpoke" },
     { "freefile", "_freefile" },
@@ -288,7 +289,9 @@ Aliases basicalias[] = {
     { "poke", "__poke" },
     { "rdpin", "_rdpin" },
     { "rnd", "_basic_rnd" },
+    { "settime", "_basic_settime" },
     { "strerror$", "_strerror" },
+    { "time$", "_basic_time" },
     { "umount", "_umount" },
     { "val", "__builtin_atof" },
     { "val%", "__builtin_atoi" },
