@@ -88,41 +88,7 @@ mygetc(FILE *stream, MyState *ms)
   return mbc;
 }
 
-static int in_scanset(int c, const unsigned char *scanset);
-
-/* get a single character from stream; this may be
- * multiple bytes depending on locale
- * c is the first byte of the character
- * returns the last byte read, or EOF
- * "scanset" is a set we should check; if any byte read is not in the
- * scanset abort
- */
-static int
-mywgetc(int c, wchar_t *wc_ptr, FILE *stream, MyState *ms, const unsigned char *scanset, int *scan_check)
-{
-  size_t count;
-
-  ms->mbs.left = 0;
-  *scan_check = 1;
-  do {
-    if (c < 0 || !in_scanset(c, scanset)) {
-      *scan_check = 0;
-      return c;
-    }
-    /* NOTE: assumes c is little-endian here */
-    count = mbrtowc(wc_ptr, (char *)&c, 1, &ms->mbs);
-    if (count != ((size_t)-2)) break;
-    /* need more bytes */
-    c = fgetc(stream);
-    ms->incount++;
-  } while (1);
-  if (count == (size_t)-1) {
-    /* this is harsh, but makes us pass the compatiblity test */
-    *wc_ptr = 0;
-    return EOF;
-  }
-  return c;
-}
+//static int in_scanset(int c, const unsigned char *scanset);
 
 static void
 myungetc(int c, FILE *stream, MyState *ms)
@@ -165,6 +131,40 @@ in_scanset(int c, const unsigned char *scanset)
     last = wc;
   }
   return !inset;
+}
+
+/* get a single character from stream; this may be
+ * multiple bytes depending on locale
+ * c is the first byte of the character
+ * returns the last byte read, or EOF
+ * "scanset" is a set we should check; if any byte read is not in the
+ * scanset abort
+ */
+static int
+mywgetc(int c, wchar_t *wc_ptr, FILE *stream, MyState *ms, const unsigned char *scanset, int *scan_check)
+{
+  size_t count;
+
+  ms->mbs.left = 0;
+  *scan_check = 1;
+  do {
+    if (c < 0 || !in_scanset(c, scanset)) {
+      *scan_check = 0;
+      return c;
+    }
+    /* NOTE: assumes c is little-endian here */
+    count = mbrtowc(wc_ptr, (char *)&c, 1, &ms->mbs);
+    if (count != ((size_t)-2)) break;
+    /* need more bytes */
+    c = fgetc(stream);
+    ms->incount++;
+  } while (1);
+  if (count == (size_t)-1) {
+    /* this is harsh, but makes us pass the compatiblity test */
+    *wc_ptr = 0;
+    return EOF;
+  }
+  return c;
 }
 
 /*
